properly removed gap, fixed styling of drop downs and the hover

--- a/event_horizon/src/components/Navbar.css
+++ b/event_horizon/src/components/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   background: #002452;
-  height: 50px;
+  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50px;
+  height: 80px;
   max-width: 1500px;
 }
 
@@ -36,7 +36,7 @@
 
 .nav-menu {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(5, auto);
   grid-gap: 10px;
   list-style: none;
   text-align: center;
@@ -46,8 +46,7 @@
 }
 
 .nav-item {
-  height: 1px;
-  font-size: 1.2rem;
+  height: 80px;
 }
 
 .nav-links {
@@ -77,6 +76,12 @@
 }
 
 @media screen and (max-width: 960px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
   .NavbarItems {
     position: relative;
   }
@@ -87,7 +92,7 @@
     width: 100%;
     height: 90vh;
     position: absolute;
-    top: 80px;
+    top: 60px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
@@ -95,7 +100,7 @@
 
   .nav-menu.active {
     background: #002452;
-    left: 1;
+    left: 0;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
@@ -163,11 +168,11 @@
   display: none;
   position: absolute;
   background: #002452;
-  font-size: 1.0rem;
-  width: 12%;
+  font-size: 0.965rem;
+  width: 6.7%;
   z-index: 1;
   transition: all 0.5s ease;
-  padding-top: 20px;
+  padding-top: 0px;
   text-align: left;
 }
 
@@ -177,14 +182,16 @@
   list-style: none;
 }
 
-.dropdown-menu .nav-links {
-  color: #888; /* Set the text color to grey */
+.dropdown-nav-links {
+  color: #b0abab;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
 }
 
-.dropdown-menu .nav-links:hover {
-  border-bottom: 4px solid #fff;
+.dropdown-nav-links:hover {
   color: #fff; /* Set the text color to white on hover */
   transition: all 0.2s ease-out;
 }
